# src/modules/notes/infra/typeorm/Entities/Notes.ts
@@ -1,26 +1,19 @@
 import { Messages } from "../../../../messages/infra/typeorm/Entities/Messages";
 import { Entity, PrimaryGeneratedColumn, Column, CreateDateColumn, UpdateDateColumn, OneToMany } from "typeorm";
 
-@Entity({ name: 'chats' })
-class Chats {
+@Entity({ name: 'notes' })
+class Notes {
     @PrimaryGeneratedColumn()
     id: number;
 
     @Column('varchar',{ nullable: true })
     supportId: string;
     
-    @Column('varchar')
-    projectId: string;
-     // supportId projectId statusAttention dateIndex
     @Column('varchar',{ nullable: true })
-    statusAttention: string;
+    note: string;
 
-    // @OneToMany(()=>Messages,message=>message.chatId)
-    // message: Messages[]
-
-
-    @Column('date')
-    dateIndex: Date;
+    @Column('varchar')
+    chatId: string;
 
     @CreateDateColumn()
     createdAt: Date;
@@ -29,4 +22,4 @@ class Chats {
     updatedAt: Date;
 }
 
-export {Chats}
+export {Notes}
